[gd_scene load_steps=11 format=3 uid="uid://cne0enyuvxtyv"]

[ext_resource type="Texture2D" uid="uid://bxhla36yhi3q5" path="res://textures/player/char_35.png" id="1"]
[ext_resource type="Script" path="res://scenes/Enemy.gd" id="2"]
[ext_resource type="Script" path="res://scenes/EnemyBody.gd" id="3"]
[ext_resource type="Script" path="res://scenes/EXPMONEY.gd" id="4"]
[ext_resource type="AudioStream" uid="uid://cuagrtyw07a88" path="res://sfx/click.wav" id="5"]

[sub_resource type="Animation" id="1"]
resource_name = "Walk"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy/Sprite2D:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.35, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [15.0, -15.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bph6v"]
_data = {
"Walk": SubResource("1")
}

[sub_resource type="CapsuleShape2D" id="5"]
radius = 0.0
height = 0.0

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(32.5, 32.5)

[sub_resource type="CircleShape2D" id="6"]
radius = 28.0179

[node name="Enemy" type="Node2D"]
script = ExtResource("2")
health = 1000

[node name="Enemy" type="CharacterBody2D" parent="." groups=["Enemy"]]
position = Vector2(0, -24)
script = ExtResource("3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy"]
root_node = NodePath("../..")
autoplay = "Walk"
libraries = {
"": SubResource("AnimationLibrary_bph6v")
}

[node name="Sprite2D" type="Sprite2D" parent="Enemy"]
z_index = -5
position = Vector2(1.43051e-06, 1.43051e-06)
rotation = -0.261799
scale = Vector2(4, 4)
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
shape = SubResource("5")
disabled = true

[node name="HurtBox" type="Area2D" parent="Enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/HurtBox"]
shape = SubResource("3")

[node name="Hitbox" type="Area2D" parent="Enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Hitbox"]
shape = SubResource("6")

[node name="EXPMONEY" type="Node" parent="."]
script = ExtResource("4")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")

[connection signal="die" from="." to="EXPMONEY" method="_on_Enemy_die"]
[connection signal="knockback" from="." to="Enemy" method="_on_Enemy_knockback"]
[connection signal="body_entered" from="Enemy/HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="body_exited" from="Enemy/HurtBox" to="." method="_on_HurtBox_body_exited"]
[connection signal="area_entered" from="Enemy/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="Enemy/Hitbox" to="." method="_on_Hitbox_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
